[package]
name = "solana-lite-rpc-services"
version = "0.2.4"
edition = "2021"
description = "Services used by solana lite rpc"
rust-version = "1.73.0"
repository = "https://github.com/blockworks-foundation/lite-rpc"
license = "AGPL"

[dependencies]
solana-sdk = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-transaction-status = { workspace = true }
solana-version = { workspace = true }
solana-client = { workspace = true }
solana-net-utils = { workspace = true }
solana-pubsub-client = { workspace = true }
solana-streamer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = "1.*"
bincode = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }
dashmap = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
async-channel = { workspace = true }
quinn = { workspace = true }
chrono = { workspace = true }
rustls = { workspace = true }
solana-lite-rpc-core = { workspace = true }

[dev-dependencies]
tracing = { workspace = true }
# note: version 0.5.6 has a known bug
crossbeam-channel = "0.5.6"
countmap = "0.2.0"
