[package]
name = "solana-lite-rpc-stakevote"
version = "0.2.3"
edition = "2021"
description = "History implementations used by solana lite rpc"
rust-version = "1.70.0"
repository = "https://github.com/blockworks-foundation/lite-rpc"
license = "AGPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
borsh = "0.10.3"
bs58 = "0.4.0"
futures = { version = "0.3.28", default-features = false }
futures-util = "0.3.28"
hex = "0.4.3"
log = "0.4.17"
tracing-subscriber = "0.3.16"
tokio = { version = "1.*", features = ["full"] }
nom = "7.1.3"
itertools = "0.11.0"

reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.40"

yellowstone-grpc-client = "1.11.0+solana.1.16.14"
yellowstone-grpc-proto = "1.10.0+solana.1.16.14"

solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-ledger = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-rpc-client = { workspace = true }
solana-version = { workspace = true }
solana-account-decoder = { workspace = true }
solana-program = { workspace = true }

solana-lite-rpc-core = { workspace = true }
