[package]
name = "solana-lite-rpc-stakevote"
version = "0.2.4"
edition = "2021"
description = "History implementations used by solana lite rpc"
rust-version = "1.75.0"
repository = "https://github.com/blockworks-foundation/lite-rpc"
license = "AGPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-ledger = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-rpc-client = { workspace = true }
solana-version = { workspace = true }
solana-account-decoder = { workspace = true }
solana-program = { workspace = true }

solana-lite-rpc-core = { workspace = true }

futures = { version = "0.3.28", default-features = false }
tokio = { version = "1.28.2", features = ["full"]}
futures-util = "0.3.28"

