[package]
name = "solana-lite-rpc-storage"
version = "0.2.2"
edition = "2021"
description = "Storage implementations used by solana lite rpc"
rust-version = "1.67.1"
repository = "https://github.com/blockworks-foundation/lite-rpc"
license = "AGPL"

[dependencies]
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-rpc-client = { workspace = true }

dashmap = {workspace = true}
async-trait = { workspace = true }
tokio = "1.*"

solana-lite-rpc-core = {workspace = true}
solana-rpc-client-api = {workspace = true}
