[package]
name = "accounts-on-demand-tester"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { version = "1.28.2", features = ["full", "fs"]}
futures = { workspace = true }
csv = "1.3.0"

solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
