[package]
name = "custom-tpu-send-transactions"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-lite-rpc-services = {workspace = true}
solana-lite-rpc-core = {workspace = true}