[package]
name = "custom-tpu-send-transactions"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-lite-rpc-services = {workspace = true}
solana-lite-rpc-core = {workspace = true}
solana-lite-rpc-cluster-endpoints = {workspace = true}

solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }

tokio = "1.28.2"
clap = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
rand = "0.8.5"
rand_chacha = "0.3.1"
log = { workspace = true }
itertools = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version="0.11.26", default-features=false, features=["rustls-tls"] }