[package]
name = "dump-blocks-from-grpc-to-disk"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "dump-blocks-from-grpc-to-disk"
path = "src/grpc_dump_blocks.rs"

[dependencies]
solana-sdk = { workspace = true }
geyser-grpc-connector = { workspace = true }

solana-lite-rpc-cluster-endpoints = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { version = "1.28.2"}
tokio-util = "0.7"
chrono = { workspace = true }
itertools = { workspace = true }

