[package]
name = "query-blockstore"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true


[dependencies]
solana-sdk = { workspace = true }
solana-rpc-client = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-transaction-status = { workspace = true }
solana-version = { workspace = true }
solana-account-decoder = { workspace = true }

solana-lite-rpc-core = {workspace = true}

log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { version = "1.28.2"}
tokio-util = "0.7"
chrono = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }

assert-json-diff = "2.0.2"
