[package]
name = "history"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-transaction-status = { workspace = true }
solana-sdk = { workspace = true }
tokio = { version = "1.*", features = ["macros"]  }
futures = { workspace = true }
